crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v113.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 113
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 2
          - secs: 0
            nanos: 27000000
        - - 7
          - secs: 0
            nanos: 18000000
        - - 10
          - secs: 0
            nanos: 20000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 64000000
        - - 2
          - secs: 0
            nanos: 62000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 62000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 42000000
        - - 3
          - secs: 0
            nanos: 25000000
        - - 8
          - secs: 0
            nanos: 67000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 1
          - secs: 0
            nanos: 13000000
        - - 10
          - secs: 0
            nanos: 80000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 39000000
      stake_weighted_median:
        secs: 0
        nanos: 39000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 389000000
        - - 10
          - secs: 0
            nanos: 274000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 389000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 3
          - secs: 0
            nanos: 254000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 499000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 767000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 374000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 117000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 244000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 248000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 125000000
  - - mixed_commands
    - secs: 0
      nanos: 240000000
  - - upgrade_package
    - secs: 0
      nanos: 389000000
