crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v114.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 114
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 7000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 10
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 7
          - secs: 0
            nanos: 42000000
        - - 10
          - secs: 0
            nanos: 36000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 42000000
  - - SplitCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 79000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 3
          - secs: 0
            nanos: 46000000
        - - 8
          - secs: 0
            nanos: 43000000
        - - 7
          - secs: 0
            nanos: 31000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - Upgrade
    - observations:
        - - 10
          - secs: 0
            nanos: 576000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 8
          - secs: 0
            nanos: 892000000
      stake_weighted_median:
        secs: 0
        nanos: 892000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 10
          - secs: 0
            nanos: 380000000
        - - 8
          - secs: 0
            nanos: 95000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 55000000
        - - 9
          - secs: 0
            nanos: 99000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 99000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 367000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 330000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 129000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 122000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 168000000
  - - make_move_vec_0_elements
    - secs: 0
      nanos: 19000000
  - - mixed_commands
    - secs: 0
      nanos: 252000000
  - - upgrade_package
    - secs: 0
      nanos: 892000000
