crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v116.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 116
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 9
          - secs: 0
            nanos: 15000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 7
          - secs: 0
            nanos: 15000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 3
          - secs: 0
            nanos: 70000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 63000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 35000000
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 91000000
      stake_weighted_median:
        secs: 0
        nanos: 35000000
  - - Upgrade
    - observations:
        - - 1
          - secs: 0
            nanos: 677000000
        - - 10
          - secs: 0
            nanos: 530000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 8
          - secs: 0
            nanos: 802000000
      stake_weighted_median:
        secs: 0
        nanos: 802000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 8
          - secs: 0
            nanos: 322000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 322000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 2
          - secs: 0
            nanos: 290000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 307000000
        - - 10
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 290000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 322000000
  - - mixed_move_calls
    - secs: 0
      nanos: 612000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 356000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 140000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 305000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 189000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 114000000
  - - mixed_commands
    - secs: 0
      nanos: 228000000
  - - upgrade_package
    - secs: 0
      nanos: 802000000
