crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v123.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 123
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 29000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 7
          - secs: 0
            nanos: 21000000
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 7
          - secs: 0
            nanos: 21000000
        - - 5
          - secs: 0
            nanos: 45000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 45000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 46000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 6
          - secs: 0
            nanos: 30000000
      stake_weighted_median:
        secs: 0
        nanos: 46000000
  - - TransferObjects
    - observations:
        - - 7
          - secs: 0
            nanos: 24000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 52000000
        - - 8
          - secs: 0
            nanos: 64000000
      stake_weighted_median:
        secs: 0
        nanos: 52000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 8
          - secs: 0
            nanos: 297000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 0
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 162000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 3
          - secs: 0
            nanos: 69000000
        - - 2
          - secs: 0
            nanos: 327000000
        - - 3
          - secs: 0
            nanos: 317000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 327000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 162000000
  - - mixed_move_calls
    - secs: 0
      nanos: 489000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 328000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 260000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 92000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 90000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 105000000
  - - mixed_commands
    - secs: 0
      nanos: 249000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
